# shoppinglist-with-servant

./: LICENSE  shoppinglist-with-servant.cabal  stack.yaml
app/: Main.hs
src/: Lib.hs  LibFetch.hs
test/: Spec.hs
