name:                shoppinglist-with-servant
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/sadhal/shoppinglist-with-servant
license:             BSD3
license-file:        LICENSE
author:              Sadmir Halilovic
maintainer:          halilovic.sadmir@gmail.com
copyright:           MIT License
category:            Other
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, LibFetch
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , lucid
                     , servant == 0.4.*
                     , servant-lucid
                     , servant-server
                     , wai
                     , warp
                     , HTTP
                     , split
                     , either
                     , transformers
                     , blaze-html
  default-language:    Haskell2010

executable shoppinglist-with-servant-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , shoppinglist-with-servant
  default-language:    Haskell2010

test-suite shoppinglist-with-servant-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , shoppinglist-with-servant
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/sadhal/shoppinglist-with-servant
